# mls-messenger-sample

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
backend/: build.gradle.kts
backend/src/main/kotlin/com/messenger/sample/: MessengerServer.kt
backend/src/main/kotlin/com/messenger/sample/backend/: Application.kt
backend/src/main/kotlin/com/messenger/sample/backend/plugins/: Routing.kt  Serialization.kt
backend/src/main/kotlin/com/messenger/sample/backend/routes/: MessageRoutes.kt
backend/src/main/kotlin/com/messenger/sample/backend/services/: MessageService.kt
backend/src/main/kotlin/com/messenger/sample/backend/storage/: InMemoryStorage.kt
backend/src/main/kotlin/com/messenger/sample/services/: ServerStorage.kt
desktop-client/: build.gradle.kts
desktop-client/src/main/kotlin/com/messenger/sample/desktop/: Main.kt
desktop-client/src/main/kotlin/com/messenger/sample/desktop/services/: BackendService.kt  HttpClientService.kt
desktop-client/src/main/kotlin/com/messenger/sample/desktop/ui/: MLSFunctions.kt  MessengerApp.kt  MessengerUI.kt
desktop-client/src/main/kotlin/uniffi/mls_rs_uniffi/: mls_rs_uniffi.kt
gradle/: libs.versions.toml
native/: Cargo.toml  build.gradle.kts  build.rs
native-wrapper/: build.gradle.kts
native-wrapper/src/main/kotlin/com/messenger/sample/native/: MlsNativeWrapper.kt
native/src/: lib.rs
shared/: build.gradle.kts
shared/src/main/kotlin/com/messenger/sample/shared/models/: Message.kt  SharedModels.kt
(+10 files in other folders)
