[package]
name = "mls-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "mls_native"
crate-type = ["cdylib"]

[dependencies]
openmls = "0.5.0"
openmls-traffic = "0.5.0"
openmls-crypto = "0.5.0"
openmls-storage = "0.5.0"
openmls-ffi = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cbindgen = "0.24"
